# 2dgamedesigner

./: .gitignore  CMakeLists.txt  readme.txt  resources.qrc
build-qt/debug/2DGameDesigner_autogen/BGRBHDZVKE/: moc_TileEditor.cpp
build-qt/debug/2DGameDesigner_autogen/include/: moc_qtbuttonpropertybrowser.cpp  moc_qteditorfactory.cpp  moc_qttreepropertybrowser.cpp  moc_qtvariantproperty.cpp
build-qt/default/2DGameDesigner_autogen/: mocs_compilation.cpp
build-qt/default/2DGameDesigner_autogen/BGRBHDZVKE/: moc_CollectionControl.cpp  (+2 more)
src/: main.cpp
src/2dga_api/: Animation.cpp  Animation.h  MotionValues.cpp  MovingPart.cpp  MovingPart.h
src/Atlas/: Atlas.cpp  Atlas.h  AtlasWin.cpp  AtlasWin.h  DataContainer.cpp  DataContainer.h
src/Atlas/pngopt/: pngopt.cpp  pngopt.h  savepngpitch.cpp
src/Core/: Core.cpp  Core.h  CoreFont.cpp  CoreFont.h  FontManager.cpp  FontManager.h  InputSystem.cpp  InputSystem.h  Math.cpp  Math.h  Matrix.h  Messager.cpp  Messager.h  MotionValues.h  Object.cpp  Object.h  SplinePath.h  TextureManager.cpp  TextureManager.h  WalkThrough.cpp  WalkThrough.h  types.cpp  types.h
src/Core/ogl/: render.cpp  render.h  sprite.cpp  sprite.h  textures.cpp  vertexbuffer.cpp  vertexbuffer.h
src/Gamee/: AnimationArea.cpp  AnimationArea.h  Beauty.cpp  Beauty.h  BeautyBase.cpp  BeautyBase.h  BeautyText.cpp  BeautyText.h  ClickArea.cpp  ClickArea.h  CollectionControl.cpp  CollectionControl.h  ColoredButton.cpp  ColoredButton.h  ColoredPolygon.cpp  ColoredPolygon.h  Complex.cpp  Complex.h  CreateProject.cpp  CreateProject.h  GMessageBox.cpp  GMessageBox.h  GroundLine.cpp  GroundLine.h  LevelSet.cpp  LevelSet.h  LinkToComplex.cpp  LinkToComplex.h  RedoUndoManager.cpp  RedoUndoManager.h  SelectionTool.cpp  SelectionTool.h  SolidGroundLine.cpp  SolidGroundLine.h  StretchTexture.cpp  StretchTexture.h  TileEditor.cpp  TileEditor.h  TileEditorInterface.cpp  TileEditorInterface.h  (+2 more)
src/qtpropertybrowser/src/: qteditorfactory.cpp  qtpropertybrowserutils.cpp  qtpropertymanager.cpp
(+4 files in other folders)
